Update documentation files and scripts for improved presentation and functionality
- Updated versioning for CSS and JavaScript files across multiple HTML documentation pages to ensure the latest styles and scripts are loaded.
- Adjusted the generated timestamp in the documentation to reflect the current generation time.
- Enhanced the data-integration.js script to conditionally display action buttons based on the current page context, improving user interaction.

--- a/html_templates/base.html
+++ b/html_templates/base.html
@@ -182,8 +182,8 @@
 
     <!-- Scripts -->
     <!-- Modern JavaScript Application -->
-    <script src="assets/js/app.js"></script>
-    <script src="assets/js/data-integration.js"></script>
+    <script src="assets/js/app.js?v={{ range(1000, 9999) | random }}"></script>
+    <script src="assets/js/data-integration.js?v={{ range(1000, 9999) | random }}"></script>
     
     <script>
     // TOC toggle behavior
