Enhance documentation generation and API server functionality
- Updated the API server to integrate with a Cursor vector database, enabling AI-powered analysis of repository data.
- Added a new endpoint to serve a search index for documentation search functionality.
- Introduced a Quality Analyzer and related generators to assess code quality and generate comprehensive quality reports.
- Removed outdated HTML documentation files and scripts, streamlining the project structure.
- Enhanced HTML templates and styles for improved presentation and user interaction.
- Updated the .gitignore file to exclude generated documentation files.

--- a/html_templates/base.html
+++ b/html_templates/base.html
@@ -181,9 +181,12 @@
     </dialog>
 
     <!-- Scripts -->
-    <!-- Modern JavaScript Application -->
+    <!-- Modular JavaScript Architecture -->
     <script src="assets/js/app.js?v={{ range(1000, 9999) | random }}"></script>
-    <script src="assets/js/data-integration.js?v={{ range(1000, 9999) | random }}"></script>
+    <script src="assets/js/core-data-manager.js?v={{ range(1000, 9999) | random }}"></script>
+    <script src="assets/js/statistics-manager.js?v={{ range(1000, 9999) | random }}"></script>
+    <script src="assets/js/module-renderer.js?v={{ range(1000, 9999) | random }}"></script>
+    <script src="assets/js/architecture-diagrams.js?v={{ range(1000, 9999) | random }}"></script>
     
     <script>
     // TOC toggle behavior
