--- a/html_templates/components.html
+++ b/html_templates/components.html
@@ -15,9 +15,9 @@
 <h1 id="overview">Components</h1>
 <p>Modules with clear descriptions from the analysed repository.</p>
 
-<section class="components-list" id="components">
-    <h2>🧩 Components</h2>
-    <div class="getting-started-grid" id="components-grid"></div>
+<section id="components">
+    <h2>📦 Detected Components</h2>
+    <div id="components-grid" class="getting-started-grid"></div>
 </section>
 
 {% endblock %}
