Enhance documentation generation and quality analysis features
- Updated .gitignore to exclude the 'docs' directory.
- Added a new configuration option in doc_config.yaml to limit the number of detailed quality reports generated.
- Enhanced HTML templates for better presentation, including updates to api.html and complexity.html for improved user experience.
- Implemented mobile navigation toggle functionality in base.html for better accessibility on smaller screens.
- Refactored quality analysis logic in main.py to enhance insights using AI analysis, focusing on top modules.
- Improved quality assessment methods in quality_analyzer.py to support detailed function analysis and suggestions.
- Integrated caching and retry mechanisms in quality_llm_integration.py for more efficient LLM interactions.

--- a/html_templates/api.html
+++ b/html_templates/api.html
@@ -61,7 +61,7 @@
                 {% elif (e.method or 'GET') == 'DELETE' %}🗑️
                 {% else %}🔄{% endif %}
             </div>
-            <h3><span class="http-method http-method--{{ (e.method or 'GET') | lower }}">{{ e.method or 'GET' }}</span></h3>
+            <h3><span class="http-method http-method--{{ (e.method or 'GET') | lower }}">{{ e.method or 'GET' }}</span> {{ e.name or e.path or e.endpoint }}</h3>
             
             <div class="endpoint-details">
                 <strong>Path:</strong>
